--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,8 @@ Thumbs.db
 vite.config.*.timestamp*
 vitest.config.*.timestamp*
 test-output
+
+# Environment variables
+.env
+.env.local
+.env*.local
