--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-three/fiber": "^9.4.2",
     "axios": "^1.13.2",
     "framer-motion": "^12.30.0",
+    "js-cookie": "^3.0.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-globe.gl": "^2.37.0",
@@ -37,6 +38,7 @@
     "@swc/helpers": "~0.5.11",
     "@testing-library/dom": "10.4.0",
     "@testing-library/react": "16.3.0",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "20.19.9",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
