refactor(#41): pr 수정

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
 # API Base URL
-VITE_BASE_URL=https://mohaeng-api-stag.dsmhs.kr
+VITE_BASE_URL=
+
+# API PROD Base URL
+VITE_PROD_BASE_URL=
 
 # Google OAuth Client ID
 VITE_GOOGLE_CLIENT_ID=your-google-client-id-here
